@@ -21,6 +21,9 @@ akka.Release.settings
 shellPrompt := { s => Project.extract(s).currentProject.id + " > " }
 resolverSettings
 
+val jdkVersion: String = System.getProperty("java.version")
+val isJDK9 = jdkVersion startsWith "9"
+
 lazy val aggregatedProjects: Seq[ProjectReference] = Seq(
   actor, actorTests,
   agent,
@@ -97,6 +100,9 @@ lazy val camel = akkaModule("akka-camel")
   .settings(Dependencies.camel)
   .settings(AutomaticModuleName.settings("akka.camel"))
   .settings(OSGi.camel)
+  .settings(
+    javaOptions in Test ++= { if (isJDK9) Seq("--add-modules", "java.xml.bind") else Seq() }
+  )
 
 lazy val cluster = akkaModule("akka-cluster")
   .dependsOn(remote, remoteTests % "test->test" , testkit % "test->test")
